--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -2182,6 +2182,8 @@
     <Content Include="Views\Volunteer\DonationHistory.cshtml" />
     <Content Include="Views\Admin\ToConfirm.cshtml" />
     <Content Include="Views\Page\AdminApprove.cshtml" />
+    <Content Include="Views\Volunteer\PaymentSuccess.cshtml" />
+    <Content Include="Views\Volunteer\PaymentFailed.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
