--- a/Tabang-Hub/Tabang-Hub/Web.config
+++ b/Tabang-Hub/Tabang-Hub/Web.config
@@ -64,7 +64,7 @@
   </system.codedom>
   <connectionStrings>
    
-  <add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TabangHub;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+ <add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=TabangHub;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
